2007-02-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/OwnerEditor.py: include $Id$

2007-02-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: default Relationship buttons to insenstive.
	Setting an active person will reenable them.

2007-02-03  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000894: syntax error on Narrative web plugin

2007-02-04 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDb/_GrampsDbBase.py: add initial cursor iter impl.
        * src/GrampsDb/_CursorIterator.py: add initial cursor iter impl.
	
2007-02-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsLocale: set svn:ignore propery
	* src/BasicUtils: set svn:ignore propery
	* src/GrampsDbUtils: set svn:ignore propery
	* src/RelLib/_Researcher.py: add missing get/set methods
	* src/GrampsDbUtils/_WriteGedcom.py: db owner handling, warn for missing
	* src/GrampsCfg.py: db owner handling, new warning pref
	* src/Config/_GrampsConfigKeys.py: db owner handling, new warning pref
	* data/gramps.schemas.in: db owner handling, new warning pref
	* src/plugins/OwnerEditor.py: db owner handling, plugin tool
	* src/plugins/ownereditor.glade: db owner handling, plugin tool

2007-02-04 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsDb/_GrampsGEDDB.py: fix reader/writer import
	* ChangeLog: fix the commit of a conflit (Brian ?)
	
2007-02-03  Don Allingham  <don@gramps-project.org>
	* glade/gramps.glade: change window positioning settings
	* glade/edit_person.glade: change window positioning settings

2007-02-03  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000894: syntax error on Narrative web plugin

2007-02-03  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: convert DbState to its own file
	* src/GrampsDb/__init__.py: convert DbState to its own file
	* src/DbState.py: convert DbState to its own file